nginx-deployment-regional-pd.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
  name: csi-demo-regional

---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: csi-demo-regional
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.7.9
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-pv
              mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-pv
          persistentVolumeClaim:
           claimName: nginx-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: csi-demo-regional
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: nginx
